添加自己的样式

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" >
-<head id="Head1"><meta http-equiv="X-UA-Compatible" content="IE=Edge" /><meta http-equiv="Content-Language" content="zh-cn" /><meta http-equiv="Content-Type" content="text/html; charset=gb2312" /><meta http-equiv="Pragma" content="no-cache" /><title>
-    东莞装修网_东莞家居网-房天下东莞家居装修
-</title><meta name="keywords" content="东莞装修,东莞家居,东莞装修网,东莞家居网,东莞家居装修网" /><meta name="description" content="权威门户房天下东莞家居装修网,提供丰富的装修设计案例、装修效果图、灵感专辑、室内设计师、装修工长、建材家具导购、装修公司等全新装饰装潢信息,是包含装修问答、装修日记等装修知识的家居装修网,为您家居装修设计提供有价值的参考." /><meta name="baidu-site-verification" content="i2jHcQfMjl" /><link href="http://jj.js.soufunimg.com/home/homeimg/css/homepage2014/??common20141028.css,index20170829.css?v=4" rel="stylesheet" type="text/css" />
+<!DOCTYPE html>
+<html lang="en">
+<head id="Head1">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="Content-Language" content="zh-cn" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <title>东莞装修网_东莞家居网-房天下东莞家居装修</title>
+    <meta name="keywords" content="东莞装修,东莞家居,东莞装修网,东莞家居网,东莞家居装修网" />
+    <meta name="description" content="权威门户房天下东莞家居装修网,提供丰富的装修设计案例、装修效果图、灵感专辑、室内设计师、装修工长、建材家具导购、装修公司等全新装饰装潢信息,是包含装修问答、装修日记等装修知识的家居装修网,为您家居装修设计提供有价值的参考." />
+    <meta name="baidu-site-verification" content="i2jHcQfMjl" />
+    <link href="css/common.css" rel="stylesheet" type="text/css" />
 
     <script src="http://jj.js.soufunimg.com/home/homeimg/css/homepage2014/js/jquery-1.11.1.min.js"></script>
 
