添加自己的样式

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="权威门户房天下东莞家居装修网,提供丰富的装修设计案例、装修效果图、灵感专辑、室内设计师、装修工长、建材家具导购、装修公司等全新装饰装潢信息,是包含装修问答、装修日记等装修知识的家居装修网,为您家居装修设计提供有价值的参考." />
     <meta name="baidu-site-verification" content="i2jHcQfMjl" />
     <link href="css/common.css" rel="stylesheet" type="text/css" />
+    <link href="css/navigation.css" rel="stylesheet" type="text/css" />
 
     <script src="http://jj.js.soufunimg.com/home/homeimg/css/homepage2014/js/jquery-1.11.1.min.js"></script>
 
